--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,5 +10,6 @@ export(snpclust)
 import(GWASTools)
 import(gdsfmt)
 import(ggplot2)
+import(magrittr)
 importFrom(mclust,Mclust)
 importFrom(mclust,mclustBIC)
