--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,7 +6,7 @@ Authors@R: c(
   person("Karl", "Forner", role = "aut"),
   person("Alessandro", "Di Cara", role = "aut"),
   person("Jérôme", "Wojcik", role = "aut"))
-Description: SNPClust selects SNPs based on PCA contributions and summarizes nearby correlated SNPs by estimating haplotypes using the SHAPEIT software, in order to perform genome wide unsupervised clustering and enhance non-ancestry signals. It was developed to study systemic autoimmune diseases in the IMI PRECISESADS project.
+Description: SNP selection based on PCA contributions and summarization of nearby correlated SNPs by estimating haplotypes using the SHAPEIT software, in order to perform genome wide unsupervised clustering and enhance non-ancestry signals. Developed to study systemic autoimmune diseases in the IMI PRECISESADS project.
 Imports:
     gdsfmt,
     ggplot2,
